# genai-google

./: .gitignore  README.md  go.mod  go.sum  pyproject.toml  requirements.txt
cmd/cogdb/demo/: main.py
cmd/cogdb/demo/testdata/: flintstones.nt  flintstones2.csv
cmd/cogdb/demo2/: main.py
cmd/function_calling/: main.go  main.py
cmd/genai/: main.go  main.py
cmd/lang_chain/chat/: main.py
cmd/lang_chain/func_calling/: main.py
cmd/lang_chain/structured_output/: main.py
cmd/lang_graph/chat/: main.py
cmd/lang_graph/human_node/: main.py
cmd/lang_graph/multichat/: main.py
cmd/list_models/: main.go  main.py
cmd/ollama/list/: main.py
